environments/ephemeral/template/hasura/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hasura-route
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "PREVIEW_HASURA_HOST_PLACEHOLDER"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hasura
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
